// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonIcon euiButtonIcon--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color danger is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--danger"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color disabled is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--disabled"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color ghost is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--ghost"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color primary is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--primary"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color subdued is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--subdued"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color success is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--success"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color text is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--text"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props color warning is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--warning"
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButtonIcon euiButtonIcon--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</a>
`;

exports[`EuiButtonIcon props iconType is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--primary"
  type="button"
>
  <div
    aria-hidden="true"
    class="euiButtonIcon__icon"
    data-euiicon-type="user"
  />
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props isDisabled is rendered 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--primary"
  disabled=""
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;

exports[`EuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButtonIcon euiButtonIcon--primary"
  disabled=""
  type="button"
>
  <span
    class="euiScreenReaderOnly"
  >
    button
  </span>
</button>
`;
